Bug 252230 - browser identification: support multiple languages
Summary: browser identification: support multiple languages
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: 0.0.1
Platform: FreeBSD Ports FreeBSD
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-24 11:32 UTC by Elmar Stellnberger (AT/K)
Modified: 2023-02-19 17:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
showenv.cgi hosted on localhost/test/ (1.53 KB, application/x-shellscript)
2022-12-18 09:39 UTC, Elmar Stellnberger (AT/K)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elmar Stellnberger (AT/K) 2010-09-24 11:32:05 UTC
Version:           0.0.1 (using KDE 4.5.1) 
OS:                FreeBSD

If I have selected multiple languages via systemsettings or kcontrol then khtmls browser identification should take account of this!

Reproducible: Always




OS: Linux (i686) release 2.6.34.7-0.2-desktop
Compiler: gcc
Comment 1 Andrew Crouthamel 2018-11-05 03:15:54 UTC
Dear Bug Submitter,

This bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? I am setting the status to NEEDSINFO pending your response, please change the Status back to REPORTED when you respond.

Thank you for helping us make KDE software even better for everyone!
Comment 2 Andrew Crouthamel 2018-11-17 04:56:32 UTC
Dear Bug Submitter,

This is a reminder that this bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? This bug will be moved back to REPORTED Status for manual review later, which may take a while. If you are able to, please lend us a hand.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Justin Zobel 2022-12-14 03:09:06 UTC
Thank you for reporting this issue in KDE software. As it has been a while since this issue was reported, can we please ask you to see if you can reproduce the issue with a recent software version?

If you can reproduce the issue, please change the status to "REPORTED" when replying. Thank you!
Comment 4 Elmar Stellnberger (AT/K) 2022-12-18 09:34:37 UTC
This is still not resolved. I have configured four languages in systemsettings5, I have logged in and out (and lost some valuable site references from Firefox)  and still if I enable adding language information Konqueror 20.12.0 only adds German. This is about the displayed browser identification. However an Accept-Language tag seems to be also missing:

HTTP_ACCEPT_ENCODING=gzip, deflate, br
HTTP_UPGRADE_INSECURE_REQUESTS=1
HTTP_SEC_FETCH_DEST=document
HTTP_ACCEPT=text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9
HTTP_HOST=localhost
HTTP_SEC_FETCH_USER=?1
HTTP_SEC_FETCH_SITE=none
HTTP_CONNECTION=keep-alive
HTTP_USER_AGENT=Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) QtWebEngine/5.15.8 Chrome/87.0.4280.144 Safari/537.36 Konqueror (WebEnginePart)
HTTP_SEC_FETCH_MODE=navigate
SERVER_PROTOCOL=HTTP/1.1
Comment 5 Elmar Stellnberger (AT/K) 2022-12-18 09:39:27 UTC
Created attachment 154665 [details]
showenv.cgi hosted on localhost/test/

This is the showenv.cgi the output from above is from. As it appears there is not only an Accept-Language line missing at the http-headers; also the browser identification does not show any language information although it was selected under settings that this shall be shown. The settings dialogue pretends it would add "German" to the browser identification, which would be the wrong place to do that alas, but apparently it does not do even that.
Comment 6 Elmar Stellnberger (AT/K) 2022-12-18 09:46:24 UTC
I have uploaded the showenv.cgi script and you can test it under http://www.elstel.org/test/showenv.cgi .
Comment 7 Bug Janitor Service 2023-01-04 18:36:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konqueror/-/merge_requests/165
Comment 8 Bug Janitor Service 2023-02-19 17:36:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/konqueror/-/merge_requests/176
Comment 9 Stefano Crocco 2023-02-19 17:53:01 UTC
Git commit 58219f2ca6d1b92461d9644a40843ce2ef080b8c by Stefano Crocco.
Committed on 19/02/2023 at 17:38.
Pushed by stefanocrocco into branch 'master'.

Allow to customize Konqueror language and set the AcceptLanguage header accordingly

M  +2    -0    src/konqmainwindow.cpp
M  +2    -1    src/konqueror.rc
M  +37   -0    webenginepart/src/webenginepartcontrols.cpp
M  +14   -0    webenginepart/src/webenginepartcontrols.h

https://invent.kde.org/network/konqueror/commit/58219f2ca6d1b92461d9644a40843ce2ef080b8c