Allow to customize Konqueror language and set the AcceptLanguage header accordingly

BUG: 252230